# proyecto_cinta_inteligente

./: .gitignore  README.md  main.py  pyproject.toml
desings/: Base.stl  NEMA17_holder.stl
src/edge/: platformio.ini
src/edge/src/: main.cpp
