[project]
name = "proyecto-cinta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "numpy>=2.4.6",
    "opencv-python>=4.13.0.92",
    "python-multipart>=0.0.32",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "uvicorn>=0.49.0",
]
